Add namespaces where possible

--- a/alloy/templates/external-probers.yaml
+++ b/alloy/templates/external-probers.yaml
@@ -2,6 +2,7 @@ apiVersion: monitoring.coreos.com/v1
 kind: Probe
 metadata:
   name: hubitat-http
+  namespace: "{{ .Release.Namespace }}"
 spec:
   interval: 30s
   module: http_2xx
@@ -17,6 +18,7 @@ apiVersion: monitoring.coreos.com/v1
 kind: Probe
 metadata:
   name: raconteur-syno-ui
+  namespace: "{{ .Release.Namespace }}"
 spec:
   interval: 30s
   module: http_2xx
@@ -32,6 +34,7 @@ apiVersion: monitoring.coreos.com/v1
 kind: Probe
 metadata:
   name: morpheus-ui
+  namespace: "{{ .Release.Namespace }}"
 spec:
   interval: 30s
   module: http_2xx
