--- a/grafana/templates/lgtm-s3-creds.yaml
+++ b/grafana/templates/lgtm-s3-creds.yaml
@@ -1,6 +1,7 @@
 apiVersion: onepassword.com/v1
 kind: OnePasswordItem
 metadata:
+  namespace: "{{ .Release.Namespace }}"
   name: lgtm-s3-creds
 type: Opaque
 spec:
