--- a/argocd/templates/google-oauth-secret.yaml
+++ b/argocd/templates/google-oauth-secret.yaml
@@ -2,6 +2,7 @@ apiVersion: onepassword.com/v1
 kind: OnePasswordItem
 metadata:
   name: google-oauth-secret
+  namespace: "{{ .Release.Namespace }}"
 type: Opaque
 spec:
   itemPath: vaults/tales-secrets/items/argocd-google-oauth
