--- a/argocd/templates/tanka.yaml
+++ b/argocd/templates/tanka.yaml
@@ -2,6 +2,7 @@ apiVersion: v1
 kind: ConfigMap
 metadata:
   name: cmp-tanka
+  namespace: "{{ .Release.Namespace }}"
 data:
   plugin.yaml: |
     apiVersion: argoproj.io/v1alpha1
