--- a/cert-manager/templates/lets-encrypt-issuers.yaml
+++ b/cert-manager/templates/lets-encrypt-issuers.yaml
@@ -2,6 +2,7 @@ apiVersion: cert-manager.io/v1
 kind: ClusterIssuer
 metadata:
   name: staging-cert
+  namespace: "{{ .Release.Namespace }}"
 spec:
   acme:
     email: symmetry@pobox.com
