--- a/grafana/templates/github-data-source-secret.yaml
+++ b/grafana/templates/github-data-source-secret.yaml
@@ -1,6 +1,7 @@
 apiVersion: onepassword.com/v1
 kind: OnePasswordItem
 metadata:
+  namespace: "{{ .Release.Namespace }}"
   name: github-data-source-secret
   labels:
     grafana_datasource: "1"
