--- a/jupyterhub/templates/ghcr-pull-secret.yaml
+++ b/jupyterhub/templates/ghcr-pull-secret.yaml
@@ -2,6 +2,7 @@ apiVersion: onepassword.com/v1
 kind: OnePasswordItem
 metadata:
   name: ghcr-pull-secret
+  namespace: "{{ .Release.Namespace }}"
 type: kubernetes.io/dockerconfigjson
 spec:
   itemPath: vaults/tales-secrets/items/jupyterhub-github-token
