--- a/jupyterhub/templates/ssh-secret.yaml
+++ b/jupyterhub/templates/ssh-secret.yaml
@@ -2,6 +2,7 @@ apiVersion: onepassword.com/v1
 kind: OnePasswordItem
 metadata:
   name: ssh-secret
+  namespace: "{{ .Release.Namespace }}"
 type: Opaque
 spec:
   itemPath: vaults/tales-secrets/items/jupyterhub-ssh-key
