--- a/jupyterhub/templates/ssh-service.yaml
+++ b/jupyterhub/templates/ssh-service.yaml
@@ -2,6 +2,7 @@ apiVersion: v1
 kind: Service
 metadata:
   name: ssh-service
+  namespace: "{{ .Release.Namespace }}"
   annotations:
     external-dns.alpha.kubernetes.io/hostname: notebook-ssh.local.symmatree.com
 spec:
