--- a/loki/templates/loki-data-source.yaml
+++ b/loki/templates/loki-data-source.yaml
@@ -2,6 +2,7 @@ apiVersion: v1
 kind: ConfigMap
 metadata:
   name: loki-data-source
+  namespace: "{{ .Release.Namespace }}"
   labels:
     grafana_datasource: "1"
 data:
