--- a/mimir/templates/alertmanager-data-source.yaml
+++ b/mimir/templates/alertmanager-data-source.yaml
@@ -2,6 +2,7 @@ apiVersion: v1
 kind: ConfigMap
 metadata:
   name: alertmanager-data-source
+  namespace: "{{ .Release.Namespace }}"
   labels:
     grafana_datasource: "1"
 data:
