--- a/minio-operator/templates/sts-cert.yaml
+++ b/minio-operator/templates/sts-cert.yaml
@@ -3,7 +3,7 @@ apiVersion: cert-manager.io/v1
 kind: Certificate
 metadata:
   name: sts-certmanager-cert
-  namespace: minio-operator
+  namespace: "{{ .Release.Namespace }}"
 spec:
   dnsNames:
     - sts
