--- a/static-certs/templates/certificates.helm.yaml
+++ b/static-certs/templates/certificates.helm.yaml
@@ -2,14 +2,15 @@
 apiVersion: cert-manager.io/v1
 kind: Certificate
 metadata:
-  name: {{ .name }}
+  name: "{{ .name }}"
+  namespace: "{{ .Release.Namespace }}"
 spec:
   dnsNames:
-  - {{ .name }}{{ .subdomain }}.{{ $.Values.baseDomain }}
+  - "{{ .name }}{{ .subdomain }}.{{ $.Values.baseDomain }}"
   issuerRef:
     group: cert-manager.io
     kind: ClusterIssuer
-    name: {{ $.Values.clusterIssuer }}
+    name: "{{ $.Values.clusterIssuer }}"
   secretName: "{{ .name }}-cert"
   privateKey:
     algorithm: ECDSA
