--- a/static-certs/templates/laserjet.yaml
+++ b/static-certs/templates/laserjet.yaml
@@ -2,6 +2,7 @@ apiVersion: onepassword.com/v1
 kind: OnePasswordItem
 metadata:
   name: laserjet-cert-password
+  namespace: "{{ .Release.Namespace }}"
 type: Opaque
 spec:
   itemPath: vaults/tales-secrets/items/laserjet-cert-password
@@ -10,6 +11,7 @@ apiVersion: cert-manager.io/v1
 kind: Certificate
 metadata:
   name: laserjet
+  namespace: "{{ .Release.Namespace }}"
 spec:
   dnsNames:
     - laserjet.local.symmatree.com
