--- a/tales-tenant/templates/config-secret.yaml
+++ b/tales-tenant/templates/config-secret.yaml
@@ -2,6 +2,7 @@ apiVersion: onepassword.com/v1
 kind: OnePasswordItem
 metadata:
   name: tales-tenant-secret
+  namespace: "{{ .Release.Namespace }}"
 type: Opaque
 spec:
   itemPath: vaults/tales-secrets/items/tales-tenant-secret
