--- a/static-certs/templates/certificates.helm.yaml
+++ b/static-certs/templates/certificates.helm.yaml
@@ -3,7 +3,7 @@ apiVersion: cert-manager.io/v1
 kind: Certificate
 metadata:
   name: "{{ .name }}"
-  namespace: "{{ .Release.Namespace }}"
+  namespace: "{{ $.Release.Namespace }}"
 spec:
   dnsNames:
   - "{{ .name }}{{ .subdomain }}.{{ $.Values.baseDomain }}"
