--- a/loki/values.yaml
+++ b/loki/values.yaml
@@ -60,7 +60,7 @@ loki:
   gateway:
     readinessProbe:
       httpGet:
-        path: /ready
+        path: /
         port: 80
       initialDelaySeconds: 3
       periodSeconds: 3
