--- a/tanka/environments/mochi-mqtt/application.yaml
+++ b/tanka/environments/mochi-mqtt/application.yaml
@@ -25,3 +25,6 @@ spec:
     syncOptions:
       - CreateNamespace=true
       - ServerSideApply=true
+    managedNamespaceMetadata:
+      labels:
+        pod-security.kubernetes.io/warn: baseline
