--- a/tanka/environments/cilium-mixin/application.yaml
+++ b/tanka/environments/cilium-mixin/application.yaml
@@ -19,8 +19,8 @@ spec:
     server: https://kubernetes.default.svc
     namespace: cilium
   syncPolicy:
-    # automated:
-    #   prune: true
-    #   selfHeal: true
+    automated:
+      prune: true
+      selfHeal: true
     syncOptions:
       - ServerSideApply=true
