--- a/tanka/environments/kubernetes-mixin/application.yaml
+++ b/tanka/environments/kubernetes-mixin/application.yaml
@@ -19,9 +19,9 @@ spec:
     server: https://kubernetes.default.svc
     namespace: kubernetes-mixin
   syncPolicy:
-    # automated:
-    #   prune: true
-    #   selfHeal: true
+    automated:
+      prune: true
+      selfHeal: true
     syncOptions:
       - CreateNamespace=true
       - ServerSideApply=true
