--- a/cert-manager/Chart.yaml
+++ b/cert-manager/Chart.yaml
@@ -1,6 +1,8 @@
 apiVersion: v2
 name: cert-manager
 description: cert-manager
+# From https://github.com/cert-manager/cert-manager/blob/master/deploy/charts/cert-manager/Chart.template.yaml
+icon: https://raw.githubusercontent.com/cert-manager/community/4d35a69437d21b76322157e6284be4cd64e6d2b7/logo/logo-small.png
 type: application
 # This is the chart version. This version number should be incremented each time you make changes
 # to the chart and its templates, including the app version.
