--- a/cilium/Chart.yaml
+++ b/cilium/Chart.yaml
@@ -1,6 +1,8 @@
 apiVersion: v2
 name: cilium
 description: Cilium deployment
+# From https://github.com/cilium/cilium/blob/v1.17.6/install/kubernetes/cilium/Chart.yaml
+icon: https://cdn.jsdelivr.net/gh/cilium/cilium@main/Documentation/images/logo-solo.svg
 type: application
 # This is the chart version. This version number should be incremented each time you make changes
 # to the chart and its templates, including the app version.
