--- a/argocd/Chart.yaml
+++ b/argocd/Chart.yaml
@@ -2,15 +2,10 @@ apiVersion: v2
 name: argo-cd
 description: argo-cd deployment
 type: application
-# This is the chart version. This version number should be incremented each time you make changes
-# to the chart and its templates, including the app version.
-# Versions are expected to follow Semantic Versioning (https://semver.org/)
 version: 0.1.1
-# This is the version number of the application being deployed. This version number should be
-# incremented each time you make changes to the application. Versions are not expected to
-# follow Semantic Versioning. They should reflect the version the application is using.
-appVersion: "7.8"
+icon: https://argo-cd.readthedocs.io/en/stable/assets/logo.png
+appVersion: "3.0.12"
 dependencies:
   - name: argo-cd
-    version: 8.1.3
+    version: 8.2.2
     repository: https://argoproj.github.io/argo-helm
