Change a comment, I am not proud

--- a/.github/workflows/static-validate.yml
+++ b/.github/workflows/static-validate.yml
@@ -38,6 +38,7 @@ jobs:
       - uses: pre-commit/action@v3.0.1
         name: pre-commit
         with:
+          # Diff on failure is a default arg.
           extra_args: "--all-files"
       - name: Find modules
         id: modules
