--- a/.github/workflows/static-validate.yml
+++ b/.github/workflows/static-validate.yml
@@ -2,6 +2,11 @@ name: Static Validation
 on:
   pull_request: {}
   workflow_dispatch: {}
+  push:
+    branches:
+      - main # Run post-commit to validate, also to update caches.
+  schedule:
+    - cron: "0 1 * * *" # Daily at 0100 UTC
 jobs:
   static-validate:
     name: Static Validation
