--- a/.github/workflows/static-validate.yml
+++ b/.github/workflows/static-validate.yml
@@ -97,8 +97,8 @@ jobs:
           set -euo pipefail
           export PATH="${{ runner.temp }}/bin:$PATH"
           mkdir -p "${{ runner.temp }}/cache/kubeconform"
-          if [[ "${{ steps.deps-cache.outputs.cache-hit }}" != "true" ]]; then
-            export UPDATE=1
+          if [[ "${{ steps.deps-cache.outputs.cache-hit }}" == "true" ]]; then
+            export UPDATE=0
           fi
           ./ci-tools/check-tanka.sh ${{ steps.modules.outputs.TANKA }}
       - name: Check Helm charts
@@ -106,8 +106,8 @@ jobs:
           set -euo pipefail
           export PATH="${{ runner.temp }}/bin:$PATH"
           mkdir -p "${{ runner.temp }}/cache/kubeconform"
-          if [[ "${{ steps.deps-cache.outputs.cache-hit }}" != "true" ]]; then
-            export UPDATE=1
+          if [[ "${{ steps.deps-cache.outputs.cache-hit }}" == "true" ]]; then
+            export UPDATE=0
           fi
           ./ci-tools/check-helm.sh ${{ steps.modules.outputs.CHARTS }}
       # If we get this far, connect and validate.
