Add collector for OTLP

--- a/alloy/values.yaml
+++ b/alloy/values.yaml
@@ -65,6 +65,8 @@ k8s-monitoring:
     enabled: false
   podLogs:
     enabled: true
+  applicationObservability:
+    enabled: true
   prometheusOperatorObjects:
     enabled: true
   alloy-metrics:
@@ -109,7 +111,7 @@ k8s-monitoring:
         varlog: true
         dockercontainers: false
   alloy-receiver:
-    enabled: false
+    enabled: true
     serviceMonitor:
       enabled: true
   integrations:
