--- a/alloy/values.yaml
+++ b/alloy/values.yaml
@@ -20,6 +20,11 @@ k8s-monitoring:
     - name: localLoki
       type: loki
       url: http://loki-gateway.loki.svc/loki/api/v1/push
+    - name: localTempo
+      type: otlp
+      url: http://tempo-frontend.tempo.svc:4318/api/traces
+      "logs.enabled": false
+      "metrics.enabled": false
   # https://github.com/grafana/k8s-monitoring-helm/blob/main/charts/k8s-monitoring/charts/feature-cluster-metrics/values.yaml
   clusterMetrics:
     enabled: true
