--- a/alloy/values.yaml
+++ b/alloy/values.yaml
@@ -72,6 +72,25 @@ k8s-monitoring:
     enabled: true
   applicationObservability:
     enabled: true
+    receivers:
+      otlp:
+        grpc:
+          enabled: true
+          port: 4317
+          includeMetadata: true
+        http:
+          enabled: true
+          port: 4318
+          includeMetadata: true
+    processors:
+      kubernetes_node:
+        enabled: true
+    metrics:
+      enabled: false
+    logs:
+      enabled: false
+    traces:
+      enabled: true
   prometheusOperatorObjects:
     enabled: true
   alloy-metrics:
