--- a/alloy/values.yaml
+++ b/alloy/values.yaml
@@ -20,6 +20,11 @@ k8s-monitoring:
     - name: localLoki
       type: loki
       url: http://loki-gateway.loki.svc/loki/api/v1/push
+    - name: localTempo
+      type: otlp
+      url: http://tempo-frontend.tempo.svc:4318/api/traces
+      "logs.enabled": false
+      "metrics.enabled": false
   # https://github.com/grafana/k8s-monitoring-helm/blob/main/charts/k8s-monitoring/charts/feature-cluster-metrics/values.yaml
   clusterMetrics:
     enabled: true
@@ -65,6 +70,27 @@ k8s-monitoring:
     enabled: false
   podLogs:
     enabled: true
+  applicationObservability:
+    enabled: true
+    receivers:
+      otlp:
+        grpc:
+          enabled: true
+          port: 4317
+          includeMetadata: true
+        http:
+          enabled: true
+          port: 4318
+          includeMetadata: true
+    processors:
+      kubernetes_node:
+        enabled: true
+    metrics:
+      enabled: false
+    logs:
+      enabled: false
+    traces:
+      enabled: true
   prometheusOperatorObjects:
     enabled: true
   alloy-metrics:
@@ -109,7 +135,7 @@ k8s-monitoring:
         varlog: true
         dockercontainers: false
   alloy-receiver:
-    enabled: false
+    enabled: true
     serviceMonitor:
       enabled: true
   integrations:
