--- a/tempo/values.yaml
+++ b/tempo/values.yaml
@@ -15,10 +15,7 @@ tempo:
         backend: s3
         s3:
           bucket: tempo-storage
-          # The output values if minio was enabled are found here:
-          # https://github.com/grafana/loki/blob/main/production/helm/loki/templates/_helpers.tpl#L213C2-L218C17
-          # We cannot directly use them but it is a good reference.
-          endpoint: https://minio.tales-tenant.svc
+          endpoint: minio.tales-tenant.svc:443
           # For unclear reasons the Kubernetes dollar-paren syntax is not
           # expanded but this is Loki's native expansion syntax with config.expand-env=true
           access_key: ${SECRET_ACCESS_KEY}
