--- a/tempo/values.yaml
+++ b/tempo/values.yaml
@@ -18,8 +18,8 @@ tempo:
           endpoint: minio.tales-tenant.svc:443
           # For unclear reasons the Kubernetes dollar-paren syntax is not
           # expanded but this is Loki's native expansion syntax with config.expand-env=true
-          access_key: ${SECRET_ACCESS_KEY}
-          secret_key: ${ACCESS_KEY_ID}
+          access_key: ${ACCESS_KEY_ID}
+          secret_key: ${SECRET_ACCESS_KEY}
     extraArgs:
       config.expand-env: "true"
     extraEnvFrom:
