--- a/alloy/values.yaml
+++ b/alloy/values.yaml
@@ -85,6 +85,16 @@ k8s-monitoring:
     processors:
       kubernetes_node:
         enabled: true
+    connectors:
+      spanLogs:
+        enabled: true
+        process: true
+        roots: true
+        spans: false
+      spanMetrics:
+        enabled: true
+        histogram:
+          enabled: false
     metrics:
       enabled: false
     logs:
@@ -138,6 +148,16 @@ k8s-monitoring:
     enabled: true
     serviceMonitor:
       enabled: true
+    alloy:
+      extraPorts:
+        - name: otlp-grpc
+          port: 4317
+          targetPort: 4317
+          protocol: TCP
+        - name: otlp-http
+          port: 4318
+          targetPort: 4318
+          protocol: TCP
   integrations:
     alloy:
       instances:
