--- a/alloy/values.yaml
+++ b/alloy/values.yaml
@@ -85,6 +85,8 @@ k8s-monitoring:
     processors:
       kubernetes_node:
         enabled: true
+      batch:
+        maxSize: 2048
     connectors:
       spanLogs:
         enabled: true
@@ -148,6 +150,8 @@ k8s-monitoring:
     enabled: true
     serviceMonitor:
       enabled: true
+    controller:
+      type: "deployment"
     alloy:
       extraPorts:
         - name: otlp-grpc
