INstall jsonnet and fix dependabot

--- a/jupyterhub/docker/install-tools.ansible.yaml
+++ b/jupyterhub/docker/install-tools.ansible.yaml
@@ -135,6 +135,7 @@
         name:
           - argocd
           - helm
+          - go-jsonnet
           - jsonnet-bundler
           - kubectx
           - talosctl
