--- a/alloy/values.yaml
+++ b/alloy/values.yaml
@@ -24,6 +24,9 @@ k8s-monitoring:
       type: otlp
       protocol: http
       url: http://tempo.tempo.svc:4318/v1/traces
+      tls:
+        insecure: true
+
       logs:
         enabled: false
       metrics:
