set tlsCACert for Grafana

--- a/mimir/templates/mimir-data-source.yaml
+++ b/mimir/templates/mimir-data-source.yaml
@@ -16,3 +16,5 @@ data:
         isDefault: true
         jsonData:
           prometheusType: Mimir
+        secureJsonData:
+          tlsCACert: $__file{/etc/ssl/certs/ca-certificates.crt}
