Symmetry/mimir cert.yaml (#140)
* set tlsCACert for Grafana

* And why not connect more

--- a/mimir/templates/mimir-data-source.yaml
+++ b/mimir/templates/mimir-data-source.yaml
@@ -16,3 +16,6 @@ data:
         isDefault: true
         jsonData:
           prometheusType: Mimir
+          alertmanagerUid: alertmanager
+        secureJsonData:
+          tlsCACert: $__file{/etc/ssl/certs/ca-certificates.crt}
